Fix timer input visual issue
On smaller screens, input boxes would
overflow onto newline and overlap with
search bar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -212,6 +212,8 @@ input:focus::placeholder {
   box-shadow: 0vh 0.5vh 1vh gray;
   text-align: center;
   width: 10vw;
+  display: flex;
+  justify-content: center;
 }
 
 .generic-input{
